fixed z-index of header - smaller than modal backdrop

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -7,12 +7,11 @@
 }
 
 .nav {
-  /* width: 100%; */
   position: sticky;
   top: 0;
   left: 0;
   background-color: var(--bakground-white);
-  z-index: 1000;
+  z-index: 10;
 }
 
 .nav h1 {
